--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 jwt.secret=${jwt-secret}
 jwt.expiration=${jwt-expiration-time}
+
+api.url=${api-url}
+api.key=${api-key}
