--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,10 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
+# JWT Settings
 jwt.secret=${jwt-secret}
 jwt.expiration=${jwt-expiration-time}
 
+# ??? API
 api.url=${api-url}
 api.key=${api-key}
