FEAT : 미세먼지 수치 확인 API 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,6 @@ jwt.secret=${jwt-secret}
 jwt.expiration=${jwt-expiration-time}
 
 # ??? API
-api.url=${api-url}
+api.weather.url=${api-weather-url}
+api.finedust.url=${api-finedust-url}
 api.key=${api-key}
