--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,11 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 jwt.secret=${jwt-secret}
 jwt.expiration=${jwt-expiration-time}
 
-# ??? API
+# ????? API
 api.weather.url=${api-weather-url}
 api.finedust.url=${api-finedust-url}
 api.key=${api-key}
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
