CHORE : 위치 정보 불러오기 수정중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,10 @@ api.weather.url=${api-weather-url}
 api.finedust.url=${api-finedust-url}
 api.key=${api-key}
 
+# thymeleaf Settings
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
+
+# naver api
+naver.client.id=${naver-client-id}
