FEAT : 현재 날씨 조회 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,8 @@ jwt.secret=${jwt-secret}
 jwt.expiration=${jwt-expiration-time}
 
 # ????? API
-api.weather.url=${api-weather-url}
+api.forecast.weather.url=${api-forecast-weather-url}
+api.now.weather.url=${api-now-weather-url}
 api.finedust.url=${api-finedust-url}
 api.key=${api-key}
 
