FEAT : 인기 코스 조회 기능 및 스케줄러 추가 - associateBy를 활용한 코스 데이터 매핑 최적화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=Runways
 server.port=8606
 
+spring.timezone=Asia/Seoul
+
 spring.config.import=optional:file:.env
 
 # Database Settings
