FEAT : Redis 세팅 및 날씨 캐싱

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Runways
-server.port=8606
+server.port=${server-port}
 
 spring.timezone=Asia/Seoul
 
@@ -52,3 +52,9 @@ spring.thymeleaf.enabled=true
 
 # naver api
 naver.client.id=${naver-client-id}
+
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=${redis-port}
+spring.data.redis.password=${redis-password}
+spring.cache.type=redis
