--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,6 @@ spring.data.redis.host=localhost
 spring.data.redis.port=${redis-port}
 spring.data.redis.password=${redis-password}
 spring.cache.type=redis
+
+# llm server
+llm-server-url=${llm-server-url}
