FEAT : 소켓 추가 및 AI 서버 연동중 - 응답 타입 테스트 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.thymeleaf.enabled=true
 naver.client.id=${naver-client-id}
 
 # redis
-spring.data.redis.host=localhost
+spring.data.redis.host=${redis-host}
 spring.data.redis.port=${redis-port}
 spring.data.redis.password=${redis-password}
 spring.cache.type=redis
