FEAT : 서버 시간대 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Runways
 server.port=${server-port}
 
-spring.timezone=Asia/Seoul
+spring.jackson.time-zone=Asia/Seoul
 
 spring.config.import=optional:file:.env
 
